WS_INTEGRATION/DX Sandbox/src/objects/Reggie_Contact__c.object
<CustomObject>
    <description>Houses all of the contact information for the contacts in Continuing Education&apos;s system: Reggie.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account as listed in Reggie</description>
        <inlineHelpText>This is not the Source Organization. This is the Account according to Reggie. If you would like the Source Org, please navigate to the connected Contact - if  one is available.</inlineHelpText>
        <label>Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <description>The unique ID from Reggie</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique ID from Reggie</inlineHelpText>
        <label>Customer ID</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>2 character limit</description>
        <inlineHelpText>State abbreviation only, please.</inlineHelpText>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>11 character limit</description>
        <label>Zip Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>Reggie Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0}</displayFormat>
        <label>Reggie Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reggie Contacts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>